--- a/Day-1/index.html
+++ b/Day-1/index.html
@@ -7,6 +7,7 @@
         <link>
     </head>
     <body>
-        <script src="index.js"></script>
+        <script src="function.js"></script>
+        name
     </body>
 </html>
