--- a/Day-1/index.html
+++ b/Day-1/index.html
@@ -7,6 +7,6 @@
         <link>
     </head>
     <body>
-        <script src="control.js"></script>
+        <script src="blockscope.js"></script>
     </body>
 </html>
