--- a/Day-2/index2.html
+++ b/Day-2/index2.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Homework js</title>
+        <title>First js</title>
         <link>
     </head>
     <body>
-        <script src="Array Method Practice.js"></script>
+        <script src="array2.js"></script>
     </body>
 </html>
