--- a/Day-1/Exercise/jsHomework.html
+++ b/Day-1/Exercise/jsHomework.html
@@ -7,6 +7,6 @@
         <link>
     </head>
     <body>
-        <script src="Array Method Practice.js"></script>
+        <script src="Sum of All Elements in an Array.js"></script>
     </body>
 </html>
